@@ -16,6 +16,7 @@ $VERSION = '0.74';
 package Graph::Easy;
 
 use strict;
+use warnings;
 
 use Graph::Easy::Util qw(ord_values);
 
