@@ -14,6 +14,7 @@ $VERSION = '0.74';
 package Graph::Easy;
 
 use strict;
+use warnings;
 use Graph::Easy::Node::Cell;
 use Graph::Easy::Edge::Cell qw/
   EDGE_SHORT_E EDGE_SHORT_W EDGE_SHORT_N EDGE_SHORT_S
