@@ -18,6 +18,7 @@ use Graph::Easy::Util qw(ord_values);
 my $att_aliases;
 
 use strict;
+use warnings;
 use constant isa_cell => 0;
 
 sub _init
